--- a/Image Uploader/Web.config
+++ b/Image Uploader/Web.config
@@ -1,19 +1,25 @@
-﻿<?xml version="1.0"?>
-
+<?xml version="1.0" encoding="UTF-8"?>
 <configuration>
-
-    <system.web>
-      <compilation debug="false" targetFramework="4.0" />
-      <httpRuntime maxRequestLength="20480" />
-    </system.web>
+  <system.web>
+    <compilation debug="true" targetFramework="4.0" />
+    <httpRuntime maxRequestLength="20480" />
+  </system.web>
   <system.webServer>
     <security>
       <requestFiltering>
-        <requestLimits maxAllowedContentLength="20971520">
-          
-        </requestLimits>
+        <requestLimits maxAllowedContentLength="20971520" />
       </requestFiltering>
     </security>
+        <defaultDocument>
+            <files>
+                <remove value="default.aspx" />
+                <remove value="Default.asp" />
+                <remove value="iisstart.htm" />
+                <remove value="Default.htm" />
+                <remove value="index.html" />
+                <remove value="index.htm" />
+                <add value="vbo_km.html" />
+            </files>
+        </defaultDocument>
   </system.webServer>
-
 </configuration>
